Issue #13188: When called without an explicit traceback argument, generator.throw() now gets the traceback from the passed exception's `__traceback__` attribute.  Patch by Petri Lehtinen.